# gallery-app

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  deploy.yaml  pyproject.toml  skaffold.yaml
