[tool.poetry]
name = "galleryapp"
version = "0.1.0"
description = "An application to see images"
authors = ["Pavan Gudiwada <25551553+pavangudiwada@users.noreply.github.com>"]
readme = "README.md"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.0.1"
pre-commit = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
